--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     </div>
     <header class="page-header">
       <div class="page-header__column page-header__column--left">
-        <div class="page-header__logo"><a href="#">Fix ремонт</a></div>
+        <div class="page-header__logo">
+          <a href="#">
+            <img src="img/logo.png" alt="Fix-ремонт" width="200" height="55">
+          </a>
+        </div>
         <div class="page-header__wrapper">
           <h1 class="page-title">Ремонт квартир в типовых домах</h1>
           <p class="page-header__text">
@@ -28,6 +32,7 @@
       </div>
       <div class="page-header__column page-header__column--right">
         <button class="page-header__button button button--contacts">Контакты</button>
+        <img src="img/video.jpg" alt="видео ремонта" height="922" width="942">
       </div>
     </header>
     <main class="page-container">
@@ -61,7 +66,7 @@
         <section class="slider-item">
           <h3 class="visually-hidden">Скандинавский стиль</h3>
           <p class="slider-item__image">
-            <img src="" alt="Скандинавский стиль">
+            <img src="img/slider_image_1.jpg" alt="Скандинавский стиль" width="779" height="501">
           </p>
           <p class="slider-item__caption">
             Кафельная плитка в ванной комнате в скандинавском стиле
@@ -70,7 +75,7 @@
         <section class="slider-item">
           <h3 class="visually-hidden">Классический стиль</h3>
           <p class="slider-item__image">
-            <img src="" alt="Классический стиль">
+            <img src="img/slider_image_2.jpg" alt="Классический стиль" width="752" height="501">
           </p>
           <p class="slider-item__caption">
             Кафельная плитка в ванной комнате в скандинавском стиле
@@ -79,7 +84,7 @@
         <section class="slider-item">
           <h3 class="visually-hidden">Эко-стиль</h3>
           <p class="slider-item__image">
-            <img src="" alt="Эко-стиль">
+            <img src="img/slider_image_3.jpg" alt="Эко-стиль" width="752" height="501">
           </p>
           <p class="slider-item__caption">
             Кафельная плитка в ванной комнате в скандинавском стиле
