--- a/index.html
+++ b/index.html
@@ -1,142 +1,153 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Fix ремонт</title>
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="visually-hidden">
-      <a href="http://www.onlinewebfonts.com">oNline Web Fonts</a>
-    </div>
-    <header class="page-header">
-      <div class="page-header__column page-header__column--left">
-        <div class="page-header__logo">
-          <a href="#">
-            <img src="img/logo.png" alt="Fix-ремонт" width="200" height="55">
-          </a>
-        </div>
-        <div class="page-header__wrapper">
-          <h1 class="page-title">Ремонт квартир в типовых домах</h1>
-          <p class="page-header__text">
-            Готовый дизайн-проект, работы и материалы за 3 месяца от 610 т.р.
-          </p>
-        </div>
-        <div class="page-header__wrapper">
-          <button class="page-header__button button button--round">Узнайте о запуске первым</button>
-          <span class="page-header__start">Старт весной 2016</span>
-        </div>
-        <button class="page-header__button button button--scroll">
-          Листайте вниз, чтобы ничего не упустить
-        </button>
-      </div>
-      <div class="page-header__column page-header__column--right">
-        <button class="page-header__button button button--contacts">Контакты</button>
-        <img src="img/video.jpg" alt="видео ремонта" height="922" width="942">
-      </div>
-    </header>
-    <main class="page-container">
-      <section class="features">
-        <div class="features__inner">
-          <h2 class="features__title">Fix ремонт - это легко</h2>
-          <p class="features__caption">Готовые проекты, проверенные материалы и умелые руки</p>
-        </div>
-        <div class="features__inner">
-          <section class="feature">
-            <h3 class="feature__title">Опытная команда</h3>
-            <p class="feature__caption">Команда проектировщиков и строителей со стажем работы более 6 лет</p>
-          </section>
-          <section class="feature">
-            <h3 class="feature__title">Фиксированная смета</h3>
-            <p class="feature__caption">Никаких дополнительных расходов во время ремонта. Расчет стоимости при заключении договора</p>
-          </section>
-          <section class="feature">
-            <h3 class="feature__title">Типовые дизайн-проекты</h3>
-            <p class="feature__caption">Три стиля чистовой отделки «под ключ» и спектр дополнительных услуг</p>
-          </section>
-          <section class="feature feature__time">
-            <h3 class="feature__tittle feature__tittle">Срок работ</h3>
-            <p class="feature__caption feature__caption--time">3 месяца</p>
-          </section>
-        </div>
-      </section>
-      <div class="disigns-slider">
-        <h2 class="disigns-slider__title">3 стиля интерьера</h2>
-        <p class="disigns-slider__caption">Скандинавский, классический и эко-стиль</p>
-        <section class="slider-item">
-          <h3 class="visually-hidden">Скандинавский стиль</h3>
-          <p class="slider-item__image">
-            <img src="img/slider_image_1.jpg" alt="Скандинавский стиль" width="779" height="501">
-          </p>
-          <p class="slider-item__caption">
-            Кафельная плитка в ванной комнате в скандинавском стиле
-          </p>
-        </section>
-        <section class="slider-item">
-          <h3 class="visually-hidden">Классический стиль</h3>
-          <p class="slider-item__image">
-            <img src="img/slider_image_2.jpg" alt="Классический стиль" width="752" height="501">
-          </p>
-          <p class="slider-item__caption">
-            Кафельная плитка в ванной комнате в скандинавском стиле
-          </p>
-        </section>
-        <section class="slider-item">
-          <h3 class="visually-hidden">Эко-стиль</h3>
-          <p class="slider-item__image">
-            <img src="img/slider_image_3.jpg" alt="Эко-стиль" width="752" height="501">
-          </p>
-          <p class="slider-item__caption">
-            Кафельная плитка в ванной комнате в скандинавском стиле
-          </p>
-        </section>
-      </div>
-      <section class="form-wrapper">
-        <form class="write-us">
-          <fieldset class="write-us__fieldset">
-            <legend class="write-us__legend">
-              <h2 class="write-us__title">Узнайте о запуске сервиса первым</h2>
-            </legend>
-            <p class="write-us__special">
-              Первым 10 клиентам стальная входная дверь в подарок
-            </p>
-            <input type="text" class="write-us__input" name ="fist-second-name" placeholder="Имя и фамилия*">
-            <input type="text" class="write-us__input" name ="email" placeholder="E-mail адрес*">
-            <input type="text" class="write-us__input" name ="phone-number" placeholder="Телефон*">
-            <button class="write-us__button button button--round" type="submit">Подписаться</button>
-            <div class="write-us__wrapper">
-              <span class="write-us__caption">*Обязательные для заполнения поля</span>
-              <a href="#" class="write-us__link">Политика конфиденциальности</a>
-            </div>
-          </fieldset>
-        </form>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <div class="page-footer__wrapper">
-        <div class="page-footer__social">
-          <a href="#" class="social-button"><span class="visually-hidden">Facebook</span></a>
-          <a href="#" class="social-button"><span class="visually-hidden">Vkontakte</span></a>
-          <a href="#" class="social-button"><span class="visually-hidden">Instagram</span></a>
-        </div>
-      </div>
-      <div class="page-footer__wrapper page-footer__wrapper--about-us">
-        <span class="page-footer__title">Следите за нашим развитием</span>
-        <p class="page-footer__caption">
-          Подпишитесь на наши аккаунты в соц. сетях, знакомьтесь с нашими проектами и тем, что нас вдохновляет
-        </p>
-      </div>
-      <div class="page-footer__wrapper page-footer__wrapper--contacts contacts">
-        <div class="contacts__item contacts__item--phone">+7(812)903-54-45</div>
-        <div class="contacts__item contacts__item--address">
-          <span>Ул.Галерная, д.55,</span>
-          <span class="contacts__town">Санкт-Петербург</span>
-        </div>
-        <div class="contacts__item contacts__item--email">9035445@gmail.com</div>
-      </div>
-      <div class="page-footer__wrapper page-footer__wrapper--copywrites">
-        <div class="copywrites">СFix Ремонт,2016</div>
-      </div>
-    </footer>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<title>Fix ремонт</title>
+		<link href="css/style.css" rel="stylesheet">
+	</head>
+	<body>
+
+		<div class="visually-hidden">
+			<a href="http://www.onlinewebfonts.com">oNline Web Fonts</a>
+		</div>
+		<header class="page-header">
+			<div class="page-header__column page-header__column--left">
+				<div class="page-header__logo">
+					<a href="#">
+						<img src="img/logo.png" alt="Fix-ремонт" width="200" height="55">
+					</a>
+				</div>
+				<div class="page-header__wrapper page-header__wrapper--text">
+					<h1 class="page-header__title">Ремонт квартир в типовых домах</h1>
+					<p class="page-header__text">
+						Готовый дизайн-проект, работы и материалы за 3 месяца от 610 т.р.
+					</p>
+				</div>
+				<div class="page-header__wrapper page-header__wrapper--button">
+					<button class="page-header__button button button--round">Узнайте о запуске первым</button>
+					<span class="page-header__start">Старт весной 2016</span>
+				</div>
+				<button class="page-header__button button button--scroll">
+					Листайте вниз,<br/>чтобы ничего не упустить
+				</button>
+			</div>
+			<div class="page-header__column page-header__column--right">
+				<button class="page-header__button page-header__button--contacts button button--contacts">Контакты</button>
+			</div>
+		</header>
+		<main class="page-container">
+			<section class="features">
+				<div class="features__inner">
+					<h2 class="features__title">FIX Ремонт &mdash; это легко</h2>
+					<p class="features__caption">Готовые проекты, проверенные материалы и умелые руки</p>
+				</div>
+				<div class="features__inner features__inner--flex">
+					<section class="feature">
+						<h3 class="feature__title">Опытная команда</h3>
+						<p class="feature__caption">Команда проектировщиков и строителей со стажем работы более 6 лет</p>
+					</section>
+					<section class="feature">
+						<h3 class="feature__title">Типовые дизайн-проекты</h3>
+						<p class="feature__caption">Три стиля чистовой отделки «под ключ» и спектр дополнительных услуг</p>
+					</section>
+					<section class="feature">
+						<h3 class="feature__title">Фиксированная смета</h3>
+						<p class="feature__caption">Никаких дополнительных расходов во время ремонта. Расчет стоимости при заключении договора</p>
+					</section>
+					<section class="feature feature__time">
+						<h3 class="feature__title feature__title--time">Срок работ</h3>
+						<p class="feature__caption feature__caption--time">3 месяца</p>
+					</section>
+				</div>
+			</section>
+			<div class="disigns-slider">
+				<div class="disigns-slider__wrapper disigns-slider__wrapper--title">
+					<h2 class="disigns-slider__title">3 стиля интерьера</h2>
+					<p class="disigns-slider__caption">Скандинавский, классический и эко-стиль</p>
+				</div>
+				<div class="disigns-slider__wrapper disigns-slider__wrapper--flex">
+					<section class="slider-item slider-item--left">
+						<h3 class="visually-hidden">Скандинавский стиль</h3>
+						<p class="slider-item__image">
+							<img src="img/slider_image_1.jpg" alt="Скандинавский стиль" width="779" height="501">
+						</p>
+						<p class="slider-item__caption visually-hidden">
+							Кафельная плитка в&nbsp;ванной комнате в&nbsp;скандинавском стиле
+						</p>
+					</section>
+					<section class="slider-item">
+						<h3 class="visually-hidden">Классический стиль</h3>
+						<p class="slider-item__image">
+							<img src="img/slider_image_2.jpg" alt="Классический стиль" width="752" height="501">
+						</p>
+						<p class="slider-item__caption">
+							Кафельная плитка в&nbsp;ванной комнате в&nbsp;скандинавском стиле
+						</p>
+					</section>
+					<section class="slider-item slider-item--right">
+						<h3 class="visually-hidden">Эко-стиль</h3>
+						<p class="slider-item__image">
+							<img src="img/slider_image_3.jpg" alt="Эко-стиль" width="752" height="501">
+						</p>
+						<p class="slider-item__caption  visually-hidden">
+							Кафельная плитка в&nbsp;ванной комнате в&nbsp;скандинавском стиле
+						</p>
+					</section>
+				</div>
+			</div>
+			<section class="form-wrapper">
+				<form class="write-us">
+					<fieldset class="write-us__fieldset">
+						<legend class="write-us__legend">
+							<h2 class="write-us__title">Узнайте о запуске сервиса первым</h2>
+						</legend>
+						<p class="write-us__special">
+							Первым 10 клиентам стальная входная дверь в подарок
+						</p>
+						<label class="write-us__label">
+							<input type="text" class="write-us__input" name ="fist-second-name" placeholder="Имя и фамилия*">
+						</label>
+						<label class="write-us__label">
+							<input type="text" class="write-us__input" name ="email" placeholder="E-mail адрес*">
+						</label>
+						<label class="write-us__label">
+							<input type="text" class="write-us__input" name ="phone-number" placeholder="Телефон*">
+						</label>
+						<button class="write-us__button button button--round" type="submit">Подписаться</button>
+						<div class="write-us__wrapper">
+							<span class="write-us__caption">*Обязательные для заполнения поля</span>
+							<a href="#" class="write-us__link">Политика конфиденциальности</a>
+						</div>
+					</fieldset>
+				</form>
+			</section>
+		</main>
+		<footer class="page-footer">
+			<div class="page-footer__wrapper">
+				<div class="page-footer__social">
+					<a href="#" class="social-button"><span class="visually-hidden">Facebook</span></a>
+					<a href="#" class="social-button"><span class="visually-hidden">Vkontakte</span></a>
+					<a href="#" class="social-button"><span class="visually-hidden">Instagram</span></a>
+				</div>
+			</div>
+			<div class="page-footer__wrapper page-footer__wrapper--about-us">
+				<span class="page-footer__title">Следите за нашим развитием</span>
+				<p class="page-footer__caption">
+					Подпишитесь на наши аккаунты в соц. сетях, знакомьтесь с нашими проектами и тем, что нас вдохновляет
+				</p>
+			</div>
+			<div class="page-footer__wrapper page-footer__wrapper--contacts contacts">
+				<div class="contacts__item contacts__item--phone">+7 (812) 903-54-45</div>
+				<div class="contacts__item contacts__item--address">
+					<span>Ул. Галерная, д 55,</span>
+					<span class="contacts__town">Санкт-Петербург</span>
+				</div>
+				<div class="contacts__item contacts__item--email">9035445@gmail.com</div>
+			</div>
+			<div class="page-footer__wrapper page-footer__wrapper--copywrites">
+				<div class="copywrites">&copy; FIX Ремонт, 2016</div>
+			</div>
+		</footer>
+
+	</body>
 </html>
